--- a/Proweb/index.html
+++ b/Proweb/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Tugas Proweb</title>
+<title>Tugas Proweb 1</title>
 </head>
 <body>
 <style>
@@ -15,7 +15,7 @@ background-size: cover;}
 <tr>
 <td colspan="2">
 <center>
-<p><b style="font-size: 130%;">Kota Pematangsiantar</b></p>
+<h1><b style="font-size: 75%;">Kota Pematangsiantar</b></h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Logo_kota_pematangsiantar.png" style="width:100px;height:130px" title="Lambang Kota Pematangsiantar">
 <p style="font-size: 100%;">Motto : <i>Sapangambei Manoktok Hitei</i></p>
 </center>
@@ -25,7 +25,7 @@ background-size: cover;}
 <a href="http://www.pematangsiantarkota.go.id/">disini</a></p></td>
 </tr>
 <tr>
-<td>
+<td valign="top">
 <justify>
 <p style="font-size: 100%;">Ciri khas kota Pematangsiantar, antara lain :
 <ol>
@@ -41,7 +41,7 @@ style="width:150px;height:210px" title="Patung Dewi Kwan Im">
 <img src="https://awsimages.detik.net.id/community/media/visual/2017/11/22/0e317f94-b692-479f-be9a-4a4675395c0a.jpg?w=700&q=90"
 style="width:150px;height:150px" title="Roti Ganda">
 </ol></p></justify></td>
-<td>
+<td valign="top">
 <center>
 <p style="font-size: 100%;" align="justify">Kota Pematangsiantar (sering disingkat Siantar saja) adalah salah satu kota di Provinsi Sumatra Utara. 
 Karena letak Pematangsiantar yang strategis, ia dilintasi oleh Jalan Raya Lintas Sumatra. Kota ini memiliki luas wilayah 79,97 km2 dan berpenduduk sebanyak 247.411 jiwa (2015), dimana Laki-laki berjumlah 120.597 jiwa Dan perempuan 126.814 jiwa.</p><br>
