--- a/Proweb/index.html
+++ b/Proweb/index.html
@@ -29,10 +29,11 @@
             <td><p align="center" style="font-size: 110%">
             <b><u>Daftar Tugas Proweb</u></b> :<br><br>
             <a href="tugasproweb1.html" align="center" style="font-size: 95%">Tugas Proweb 1 Membuat Tabel</a><br><br>
-            <a href="tugasproweb2.html" align="center" style="font-size: 95%">Tugas Proweb 2 Membuat Form</a>
+            <a href="tugasproweb2.html" align="center" style="font-size: 95%">Tugas Proweb 2 Membuat Form</a><br><br>
+            <a href="tugasproweb3.html" align="center" style="font-size: 95%">Tugas Proweb 3 Membuat Operator Aritmatika</a><br><br>
             </p></td>
         </tr>    
-    </table><br><br><br><br><br><br><br>
+    </table><br><br><br>
     <center><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/Logo_of_North_Sumatra_University.svg/1200px-Logo_of_North_Sumatra_University.svg.png" 
     style="width:120px;height:130px" align="bottom"></center>  
 </body>
