--- a/Proweb/tugas3.html
+++ b/Proweb/tugas3.html
@@ -47,8 +47,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="daftartugas.php">Tugas</a>
-                    <a class="nav-link" href="tugas4.php">About</a>
+                    <a class="nav-link" href="daftartugas.html">Tugas</a>
+                    <a class="nav-link" href="tugas4.html">About</a>
                     <a class="nav-link" href="#">Login</a>
                 </div>
             </div>
