--- a/Proweb/tugas4.html
+++ b/Proweb/tugas4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugas</title>
+    <title>About</title>
     <link rel="stylesheet" href="bootstrap/bootstrap-4.5.3-dist/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Viga" rel="stylesheet">
     <link rel="stylesheet" href="mainstyle.css">
@@ -13,40 +13,45 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Proweb</a>
+            <a class="navbar-brand" href="#">Proweb</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="daftartugas.php">Tugas</a>
-                    <a class="nav-link" href="tugas4.php">About</a>
+                    <a class="nav-link" href="daftartugas.html">Tugas</a>
+                    <a class="nav-link" href="tugas4.html">About</a>
                     <a class="nav-link" href="#">Login</a>
                 </div>
             </div>
         </div>
     </nav>
+    
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <br><br>
+            <img src="me4.jpg" class="rounded-circle">
+            <h1 class="display-4">Reinaldhy Suzeta Purba</h1>
+            <p class="text">Mahasiswa Teknologi Informasi USU 2020</p>
+        </div>
+    </div>
 
-    <section class="sect2" id="sect2">
+    <section class="about" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <br><br>
-                    <h2 class="isi">Daftar Tugas</h2>
+                    <h2 class="isi">About</h2>
                     <hr>
                 </div>
             </div>
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 text-center">
-                    <br>
-                        <a class="btn btn-outline-dark" href="tugas1.php" role="button">Tugas 1</a><br><br>
-                        <a class="btn btn-outline-dark" href="tugas2.php" role="button">Tugas 2</a><br><br>
-                        <a class="btn btn-outline-dark" href="tugas3.php" role="button">Tugas 3</a><br><br>
-                        <a class="btn btn-outline-dark" href="tugas4.php" role="button">Tugas 4</a>
-                    </div>
+        
+            <div class="row">
+                <div class="col-sm-5 offset-sm-1">
+                    <br><p>Hello World, perkenalkan nama saya Reinaldhy Suzeta Purba, NIM 201402064 dari KOM A TI USU 2020. Salah satu mata kuliah yang dipelajari di jurusan Teknologi Informasi adalah Pemrograman Web. Dalam Pemrograman Web, kita akan diajari untuk mampu membuat suatu halaman web yang menarik dan interaktif dengan menggunakan CSS, Javascript, Bootstrap, PHP, dan lain-lain.</p>
+                </div>
+                <div class="col-sm-5">
+                    <br><p>Web ini merupakan sarana yang saya pakai untuk melatih skill dalam Pemrograman Web. Di dalam web ini juga terdapat beberapa tugas yang merupakan tugas dari Mata Kuliah ProWeb. Tentu saja masih banyak kekurangan di dalam web ini, Saya harap teman-teman sekalian dapat memberikan saran dan masukan demi perkembangan web ini kedepannya. Terimakasih telah mengunjungi web ini. 😁🙏 </p>
                 </div>
             </div>
         </div>
